# python-graphql

./: .gitignore  README.md  pyproject.toml
logrocket/: README.md  courses.json  main.py  schemas.py
orm/: README.md  db.py  main.py  schema.py
orm/models/: post.py  user.py
tests/: conftest.py  test_logrocket.py  test_orm.py  test_query.py
