[tool.poetry]
name = "python-graphql"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
orator = "^0.9.9"
psycopg2-binary = "^2.9.1"
fastapi = "0.61.1"
graphene = "2.1.8"
graphene-pydantic = "0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"
poethepoet = "^0.10.0"

[tool.poe.tasks]
run_orm = { "cmd" = "uvicorn orm.main:app --reload" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
